2004-09-26  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcolordialog.c: moved stuff from new() to init().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14871 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-26  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcolordialog.c: moved stuff from new() to init().
+
+2004-09-26  Michael Natterer  <mitch@gimp.org>
+
 	Ported GimpNavigationView to use actions for its buttons:
 
 	* app/menus/menus.c (menus_init): register a <GimpNaviagaionEditor>
