2004-09-26  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpcolorframe.c: changed label alignment to be more
	HIG conformant and consistent with the rest of the user interface.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14873 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-26  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcolorframe.c: changed label alignment to be more
+	HIG conformant and consistent with the rest of the user interface.
+
 2004-09-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdialogfactory.[ch]: added "name", "blurb",
