2004-09-27  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/pdb/fileops.pdb (file_load_thumbnail_invoker): use
	the GIMP_CHECK_SIZE_SM define, not the enum value
	GIMP_CHECK_SIZE_SMALL_CHECKS which is 0 (eeek!).

	* app/pdb/fileops_cmds.c: regenerated.

	* app/widgets/gimphelp.c (gimp_help_get_locales): minor cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14878 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-09-27  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/pdb/fileops.pdb (file_load_thumbnail_invoker): use
+	the GIMP_CHECK_SIZE_SM define, not the enum value
+	GIMP_CHECK_SIZE_SMALL_CHECKS which is 0 (eeek!).
+
+	* app/pdb/fileops_cmds.c: regenerated.
+
+	* app/widgets/gimphelp.c (gimp_help_get_locales): minor cleanup.
+
 2004-09-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdataeditor.[ch]: added "data" property.
