2004-09-27  Michael Natterer  <mitch@gimp.org>
	* app/dialogs/dialogs-constrcutors.[ch]: renamed some constructors
	for consistency and added a (useless) template grid.

	* app/dialogs/dialogs.c: make the arrays of GimpDialogFactoryEntries
	more readable by using macros to define them.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14881 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-09-27  Michael Natterer  <mitch@gimp.org>
+
+	* app/dialogs/dialogs-constrcutors.[ch]: renamed some constructors
+	for consistency and added a (useless) template grid.
+
+	* app/dialogs/dialogs.c: make the arrays of GimpDialogFactoryEntries
+	more readable by using macros to define them.
+
 2004-09-27  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpimagefile.c: removed conversion to TempBuf.
