--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2004-09-27  Sven Neumann  <sven@gimp.org>
+
+	* themes/Default/images/Makefile.am
+	* themes/Default/images/stock-frame-64.png: added a stock icon
+	that shows a simple drop shadow but could be exchanged for other
+	image decorations.
+
+	* libgimpwidgets/gimpstock.[ch]: register the new icon.
+
+	* app/widgets/Makefile.am
+	* app/widgets/gimpviewrenderer-frame.[ch]: new file that holds some
+	ugly code to draw a frame around a preview pixbuf.
+
+	* app/widgets/gimpviewrenderer.[ch]: the frame pixbuf is attached
+	to the GimpViewRenderer class so it can be shared by all renderers.
+
+	* app/widgets/gimpviewrendererimagefile.c: use the new functionality
+	to draw a nice frame around imagefile previews.
+
+	* app/widgets/gimpcontainerbox.c: draw imagefile preview w/o a border.
+
 2004-09-27  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/data-commands.c: cleanup.
