--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-28  Carol Spears  <carol@gimp.org>
+
+	* data/images/gimp-splash.png there was a white spot that was making
+	me crazy.  It is gone now.
+
 2004-09-28  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpaction.c (gimp_action_set_proxy): added a hack
