--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-28  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_settings_dialog):
+	simplified code and removed a compiler warning.
+
 2004-09-28  Carol Spears  <carol@gimp.org>
 
 	* data/images/gimp-splash.png there was a white spot that was making
