2004-09-28  Sven Neumann  <sven@gimp.org>
	* app/config/gimpxmlparser.[ch]: added new convenience function
	gimp_xml_parser_parse_fd().

	* app/file/Makefile.am
	* app/file/gimprecentitem.[ch]
	* app/file/gimprecentlist.[ch]: added an implementation of the
	recent-files spec as found on freedesktop.org. This code is taken
	from libegg and has been edited to fit the GIMP needs.

	* app/file/file-open.c
	* app/file/file-save.c: update the ~/.recently-used file. Fixes
	bug #131206.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14893 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-09-28  Sven Neumann  <sven@gimp.org>
+
+	* app/config/gimpxmlparser.[ch]: added new convenience function
+	gimp_xml_parser_parse_fd().
+
+	* app/file/Makefile.am
+	* app/file/gimprecentitem.[ch]
+	* app/file/gimprecentlist.[ch]: added an implementation of the
+	recent-files spec as found on freedesktop.org. This code is taken
+	from libegg and has been edited to fit the GIMP needs.
+
+	* app/file/file-open.c
+	* app/file/file-save.c: update the ~/.recently-used file. Fixes
+	bug #131206.
+
 2004-09-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontainerbox.c (gimp_container_box_get_preview):
