--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-28  Sven Neumann  <sven@gimp.org>
 
+	* app/file/gimprecentlist.c (gimp_recent_list_write_raw): handle
+	EINTR while writing.
+
+2004-09-28  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimpxmlparser.[ch]: added new convenience function
 	gimp_xml_parser_parse_fd().
 
