--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-28  Sven Neumann  <sven@gimp.org>
+
+	* docs/gimp.1.in: updated name of the splash image.
+
 2004-09-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimppalette.c: code review / cleanup.
