2004-09-28  Maurits Rijk  <m.rijk@chello.nl>
	* plug-ins/common/borderaverage.c: added size entry. Fixes #143156
	(Use size entry widget in Borderaverage plug-in)


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14897 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-28  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/common/borderaverage.c: added size entry. Fixes #143156
+	(Use size entry widget in Borderaverage plug-in)
+
 2004-09-28  Sven Neumann  <sven@gimp.org>
 
 	* docs/gimp.1.in: updated name of the splash image.
