--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-28  Sven Neumann  <sven@gimp.org>
+
+	* app/file/gimprecentlist.c: seek to the start of the file before
+	calling lockf().
+
 2004-09-28  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/common/borderaverage.c: added size entry. Fixes #143156
