--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-28  Sven Neumann  <sven@gimp.org>
+
+	* etc/ps-menurc: updated for GIMP 2.1 by Eric Pierce.
+
 2004-09-28  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/imagemap/imap_circle.c: 
