--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-29  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimp.def
+	* libgimp/gimpui.def
+	* libgimpwidgets/gimpwidgets.def: updated.
+
 2004-09-29  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/Makefile.am
