2004-09-29  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpui.def
	* libgimpwidgets/gimpwidgets.def: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14907 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-29  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpui.def
+	* libgimpwidgets/gimpwidgets.def: updated.
+
 2004-09-29  DindinX  <dindinx@gimp.org>
 
 	* libgimpwidgets/gimppreview.c
