* plug-ins/common/snoise.c: Use a GimpAspectPreview here, so the preview is   resizable.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14909 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-29  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/snoise.c: Use a GimpAspectPreview here, so the
+	preview is resizable.
+
 2004-09-29  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpui.def
