--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,40 @@
+2004-09-29  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreview.[ch]
+	* libgimpwidgets/gimpscrolledpreview.[ch]
+	* libgimpwidgets/gimpwidgets.def: moved the offsets and the
+	draw_thumb method back to the GimpPreview class.
+
+	* libgimp/gimpdrawablepreview.c: changed accordingly.
+
+	* plug-ins/common/bumpmap.c
+	* plug-ins/common/cartoon.c
+	* plug-ins/common/deinterlace.c
+	* plug-ins/common/despeckle.c
+	* plug-ins/common/dog.c
+	* plug-ins/common/edge.c
+	* plug-ins/common/engrave.c
+	* plug-ins/common/exchange.c
+	* plug-ins/common/gauss.c
+	* plug-ins/common/grid.c
+	* plug-ins/common/mblur.c
+	* plug-ins/common/neon.c
+	* plug-ins/common/noisify.c
+	* plug-ins/common/oilify.c
+	* plug-ins/common/photocopy.c
+	* plug-ins/common/sel_gauss.c
+	* plug-ins/common/sharpen.c
+	* plug-ins/common/shift.c
+	* plug-ins/common/sobel.c
+	* plug-ins/common/softglow.c
+	* plug-ins/common/spread.c
+	* plug-ins/common/struc.c
+	* plug-ins/common/unsharp.c
+	* plug-ins/common/wind.c: back to using gimp_preview_get_position().
+
+	* libgimp/gimpregioniterator.c (gimp_rgn_iterator_new): corrected
+	gtk-doc comment.
+
 2004-09-29  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/snoise.c: Use a GimpAspectPreview here, so the
