--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,14 @@
+2004-09-29  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/libgimp-docs.sgml
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpaspectpreview.sgml
+	* libgimpwidgets/libgimpwidgets-docs.sgml
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpstock.sgml: updated after preview changes.
+
+	* libgimpwidgets/tmpl/gimpscrolledpreview.sgml: new file.
+
 2004-09-29  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-docs.sgml
