--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,40 @@
 2004-09-29  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreview.[ch]
+	* libgimpwidgets/gimpwidgets.def: added gimp_preview_draw_buffer().
+
+	* libgimp/gimpaspectpreview.[ch]
+	* libgimp/gimpdrawablepreview.[ch]
+	* libgimp/gimpui.def: removed the public draw_buffer API.
+	Implement the virtual GimpPreview::draw_buffer method instead.
+
+	* plug-ins/common/cartoon.c
+	* plug-ins/common/deinterlace.c
+	* plug-ins/common/despeckle.c
+	* plug-ins/common/dog.c
+	* plug-ins/common/edge.c
+	* plug-ins/common/engrave.c
+	* plug-ins/common/exchange.c
+	* plug-ins/common/gauss.c
+	* plug-ins/common/grid.c
+	* plug-ins/common/neon.c
+	* plug-ins/common/noisify.c
+	* plug-ins/common/oilify.c
+	* plug-ins/common/photocopy.c
+	* plug-ins/common/plasma.c
+	* plug-ins/common/sel_gauss.c
+	* plug-ins/common/sharpen.c
+	* plug-ins/common/shift.c
+	* plug-ins/common/snoise.c
+	* plug-ins/common/sobel.c
+	* plug-ins/common/spread.c
+	* plug-ins/common/struc.c: changed accordingly. Don't pass the
+	preview around as GimpDrawablePreview or GimpAspectPreview. It
+	should whenever possible be accessed as GimpPreview.
+
+2004-09-29  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreview.[ch]
 	* libgimpwidgets/gimpscrolledpreview.[ch]
 	* libgimpwidgets/gimpwidgets.def: moved the offsets and the
 	draw_thumb method back to the GimpPreview class.
