*** empty log message ***
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14914 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-29  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimpcropoptions.c (gimp_crop_options_gui): plugged a
+	tiny memleak spotted by Olivier.
+
+2004-09-29  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppreview.[ch]
 	* libgimpwidgets/gimpwidgets.def: added gimp_preview_draw_buffer().
 
